<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.anhtran.mymail.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/login_email" />

    <EditText
        android:id="@+id/login_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/login_password" />

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/login_mail_provider" />

    <Spinner
        android:id="@+id/login_spinner_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_incoming_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_view_padding"
                android:paddingTop="@dimen/text_view_padding"
                android:text="@string/login_imap_server" />

            <EditText
                android:id="@+id/login_edittext_incoming_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_imap_hint"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_view_padding"
                android:paddingTop="@dimen/text_view_padding"
                android:text="@string/login_port" />

            <EditText
                android:id="@+id/login_edittext_incoming_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_imap_port_hint"
                android:inputType="number"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_outgoing_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_view_padding"
                android:paddingTop="@dimen/text_view_padding"
                android:text="@string/login_smtp_server" />

            <EditText
                android:id="@+id/login_edittext_outgoing_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_smtp_hint"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_view_padding"
                android:paddingTop="@dimen/text_view_padding"
                android:text="@string/login_port" />

            <EditText
                android:id="@+id/login_edittext_outgoing_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_smtp_port_hint"
                android:inputType="number"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/text_view_padding"
            android:paddingTop="@dimen/text_view_padding"
            android:text="@string/login_security" />

        <Spinner
            android:id="@+id/login_spinner_security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <Button
        android:id="@+id/login_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/login_connect" />
</LinearLayout>
