<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mail_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="org.anhtran.mymail.MailEditorActivity">

    <EditText
        android:id="@+id/editor_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_string_to"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Small"/>

    <EditText
        android:id="@+id/editor_cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_string_cc"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Small"/>

    <EditText
        android:id="@+id/editor_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_string_subject"
        android:inputType="textEmailSubject|textCapSentences"
        android:textAppearance="@android:style/TextAppearance.Small"/>

    <EditText
        android:id="@+id/editor_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/editor_string_message"
        android:inputType="textMultiLine|textCapSentences"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

</LinearLayout>